Better canvas & hand execution scaling  + iframe load flicker fix

--- a/Browser_IDE/stylesheet.css
+++ b/Browser_IDE/stylesheet.css
@@ -37,6 +37,7 @@ hr {
 
 iframe {
     border: 0;
+    color-scheme: auto;
 }
 
 h3 {
@@ -905,15 +906,6 @@ li.CodeMirror-hint-active {
     display: flex;
 }
 
-/* Canvas scaling fix */
-
-#canvas {
-  max-height: 100% !important;
-  max-width: 100% !important;
-  height: auto !important;
-  width: auto !important;
-}
-
 .sk-term-fmt-code1 {font-weight: bold;}
 .sk-term-fmt-code3 {font-style: italic;}
 .sk-term-fmt-code4 {text-decoration: underline;}
@@ -1027,6 +1019,47 @@ li.CodeMirror-hint-active {
 .active-mini-tab {
   color: #9fff69;
 }
+
+
+/* execution environment canvas/hand execution scaling */
+.sk-column:has(#canvasContainer) {
+  justify-content: center;
+  display: flex;
+  container-type: size;
+}
+
+#canvasContainer canvas, #canvasContainer svg {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+#canvasContainer canvas {
+  min-height: 0px;
+  min-width: 0px;
+
+  outline: none;
+  cursor: default;
+
+  margin: 0 auto;
+}
+
+#canvasContainer svg {
+  margin: 0;
+  padding: 0;
+}
+
+/* the aspect ratio here works well for 16:9 content, but
+ * really should be dynamic */
+@container (min-aspect-ratio: 8/7) {
+  #canvasContainer {
+    flex-direction: row;
+  }
+
+  #canvasContainer canvas {
+    margin: auto 0;
+  }
+}
+
 
 /*Hand Executions*/
 .handexecution {
